--- a/index.html
+++ b/index.html
@@ -279,6 +279,62 @@
                 <section class="project clearfix">
                     <div class="project_intro">
                         <header class="project_intro_header clearfix">
+                            <h4 class="project_intro_header_title">小黄人<span> - code a Minion for you</span></h4>
+                            <ul class="tech-tag-list">
+                                <li class="tech-tag-list_item tech-tag-list_item-html">HTML 5</li>
+                                <li class="tech-tag-list_item tech-tag-list_item-javascript">JavaScript</li>
+                                <li class="tech-tag-list_item tech-tag-list_item-css">CSS 3</li>
+                                <li class="tech-tag-list_item tech-tag-list_item-jQuery">jQuery</li>
+
+                            </ul>
+                        </header>
+                        <div class="project_intro_header_content">
+                            <p>
+                                基于 jQuery，动态向 style 标签添加样式以及 pre 标签添加文本，模拟css绘制小黄人的过程，主要功能有：
+                            </p>
+                            <ul class="list">
+                                <li>同时显示style代码和绘画过程。</li>
+                                <li>增加播放代码速度调节按钮。</li>
+                                <li>适配手机端。</li>
+                            </ul>
+                            <p class="project_intro_links">
+                                <a href="https://littlebirdflying.github.io/make-a-Minion/index.html" target="_blank">预览地址</a>
+                                <a href="https://github.com/littlebirdflying/make-a-Minion" target="_blank">源码地址</a>
+                            </p>
+                        </div>
+                    </div>
+                    <div class="project_thumb notPrint">
+                        <img src="./img/works/Minion.jpg" alt="苹果风格轮播">
+                    </div>
+                </section>
+                <section class="project clearfix">
+                    <div class="project_intro">
+                        <header class="project_intro_header clearfix">
+                            <h4 class="project_intro_header_title">会动的简历<span> - make your resume active</span></h4>
+                            <ul class="tech-tag-list">
+                                <li class="tech-tag-list_item tech-tag-list_item-html">HTML 5</li>
+                                <li class="tech-tag-list_item tech-tag-list_item-css">CSS 3</li>
+                                <li class="tech-tag-list_item tech-tag-list_item-javascript">JavaScript</li>
+                            </ul>
+                        </header>
+                        <div class="project_intro_header_content">
+                            <p>
+                                基于原生 JavaScript 和 CCS 3，动态向 style 标签添加样式以及 pre 标签添加文本，利用 prism.js 实现代码高亮,使简历生动起来。
+
+                            </p>
+                            <p class="project_intro_links">
+                                <a href="https://littlebirdflying.github.io/demo-animation-resume/index.html" target="_blank">预览地址</a>
+                                <a href="https://github.com/littlebirdflying/demo-animation-resume" target="_blank">源码地址</a>
+                            </p>
+                        </div>
+                    </div>
+                    <div class="project_thumb notPrint">
+                        <img src="./img/works/animation-resume.jpg" alt="导航栏">
+                    </div>
+                </section>
+                <section class="project clearfix">
+                    <div class="project_intro">
+                        <header class="project_intro_header clearfix">
                             <h4 class="project_intro_header_title">smart 在线画板<span> - Draw anything your want</span></h4>
                             <ul class="tech-tag-list">
                                 <li class="tech-tag-list_item tech-tag-list_item-html">HTML 5</li>
@@ -306,69 +362,6 @@
                         <img src="./img/works/canvas.jpg" alt="canvas画板">
                     </div>
                 </section>
-                <section class="project clearfix">
-                    <div class="project_intro">
-                        <header class="project_intro_header clearfix">
-                            <h4 class="project_intro_header_title">小黄人<span> - code a Minion for you</span></h4>
-                            <ul class="tech-tag-list">
-                                <li class="tech-tag-list_item tech-tag-list_item-html">HTML 5</li>
-                                <li class="tech-tag-list_item tech-tag-list_item-javascript">JavaScript</li>
-                                <li class="tech-tag-list_item tech-tag-list_item-css">CSS 3</li>
-                                <li class="tech-tag-list_item tech-tag-list_item-jQuery">jQuery</li>
-
-                            </ul>
-                        </header>
-                        <div class="project_intro_header_content">
-                            <p>
-                                基于 jQuery，利用动态向 style 标签添加样式以及 pre 标签添加文本，模拟css绘制小黄人的过程，主要功能有：
-                            </p>
-                            <ul class="list">
-                                <li>同时显示style代码和绘画过程。</li>
-                                <li>增加播放代码速度调节按钮。</li>
-                                <li>适配手机端。</li>
-                            </ul>
-                            <p class="project_intro_links">
-                                <a href="https://littlebirdflying.github.io/make-a-Minion/index.html" target="_blank">预览地址</a>
-                                <a href="https://github.com/littlebirdflying/make-a-Minion" target="_blank">源码地址</a>
-                            </p>
-                        </div>
-                    </div>
-                    <div class="project_thumb notPrint">
-                        <img src="./img/works/Minion.jpg" alt="苹果风格轮播">
-                    </div>
-                </section>
-                <section class="project clearfix">
-                    <div class="project_intro">
-                        <header class="project_intro_header clearfix">
-                            <h4 class="project_intro_header_title">会动的简历<span> - make your resume active</span></h4>
-                            <ul class="tech-tag-list">
-                                <li class="tech-tag-list_item tech-tag-list_item-html">HTML 5</li>
-                                <li class="tech-tag-list_item tech-tag-list_item-css">CSS 3</li>
-                                <li class="tech-tag-list_item tech-tag-list_item-javascript">JavaScript</li>
-                                <!--<li class="tech-tag-list_item tech-tag-list_item-jQuery">jQuery</li>-->
-
-                            </ul>
-                        </header>
-                        <div class="project_intro_header_content">
-                            <p>
-                                基于原生 JavaScript 和 ，利用动态向 style 标签添加样式以及 pre 标签添加文本，利用css3过渡特效，使简历生动起来。
-                            </p>
-                            <!--<ul class="list">-->
-                            <!--<li>为键盘上的 26 个字母绑定了导航网址，敲击字母即可跳转至相应导航页面</li>-->
-                            <!--<li>可以自定义每个键绑定的导航网址</li>-->
-
-                            <!--</ul>-->
-                            <p class="project_intro_links">
-                                <a href="https://littlebirdflying.github.io/myBookmarks/index.html" target="_blank">预览地址</a>
-                                <a href="https://github.com/littlebirdflying/myBookmarks" target="_blank">源码地址</a>
-                            </p>
-                        </div>
-                    </div>
-                    <div class="project_thumb notPrint">
-                        <img src="./img/works/animation-resume.jpg" alt="导航栏">
-                    </div>
-                </section>
-
             </div>
         </div>
     </section>
@@ -383,7 +376,7 @@
                     <ul>
                         <li>标签语义化：能根据 HTML5 标准编写具有语义化的文档结构。</li>
                         <li>CSS居中与布局：能快速对元素进行居中处理，使用float、flex、grid等方案进行页面布局。</li>
-                        <li>CSS动画：能使用keyframes、transition、transform等实现常见动画效果</li>
+                        <li>CSS动画：能使用keyframes、transition、transform等实现常见动画效果。</li>
                         <li>了解Bootstrap的基本使用规则。</li>
                     </ul>
                 </li>
@@ -391,7 +384,7 @@
                     <div class="circle"></div>
                     <h4>移动端页面</h4>
                     <ul>
-                        <li>PC 端根据 <meta name="viewport"> 以及媒体查询 (media query)。</li>
+                        <li>PC 端根据 <meta name="viewport"> 以及媒体查询 (media query)进行响应式开发。</li>
                         <li>移动端根据动态 REM、vw/vh 等书写响应式页面，100% 还原设计稿。 </li>
                     </ul>
                 </li>
@@ -399,23 +392,24 @@
                     <div class="circle"></div>
                     <h4>ECMAScript（JavaScript）</h4>
                     <ul>
-                        <li>熟练使用 ECMAScript 进行编程，了解闭包，原型链，面向对象，作用域链。</li>
-                        <li>熟悉 ES6/7 的常用语法，熟练使用面向对象，模块化的编程思想进行开发，并在实践中尝试使用设计模式。</li>
+                        <li>熟悉 ECMAScript，了解this、闭包、原型链、面向对象、作用域链等。</li>
+                        <li>熟悉 ES6 的常用语法，能使用 MVC 设计模式思想组织代码，使用模块化的编程思想进行开发。</li>
+                        <li>熟悉 async / await / Promise，掌握常见的 异步编程 解决方案。</li>
                     </ul>
                 </li>
                 <li>
                     <div class="circle"></div>
                     <h4>DOM/BOM</h4>
                     <ul>
-                        <li>熟悉原生DOM和BOM使用和相关标准，有前端组件开发经验。</li>
-                        <li>有前端组件封装经验，并能在实践中灵活运用。</li>
+                        <li>熟悉 DOM 事件模型，捕获、冒泡以及如何阻止事件的传递。</li>
+                        <li>熟悉原生 DOM 和 BOM 使用和相关标准。</li>
                     </ul>
                 </li>
                 <li>
                     <div class="circle"></div>
                     <h4>jQuery</h4>
                     <ul>
-                        <li>熟悉 jQuery 的常用 API，能使用 jQuery 制作网站、轮播、Tab组件等。</li>
+                        <li>熟悉 jQuery 的常用 API，能使用 jQuery 制作网站，使用事件代理、制作轮播等。</li>
                     </ul>
                 </li>
                 <li>
@@ -428,16 +422,38 @@
                 </li>
                 <li>
                     <div class="circle"></div>
+                    <h4>HTTP</h4>
+                    <ul>
+                        <li>了解 HTTP 基础知识，了解常见状态码含义，能够根据请求查看响应。</li>
+                        <li>了解 LocalStorage、Cache-Control、Etag、Expires 等知识，了解几者之间的区别。</li>
+                        <li>了解客户端缓存、Cookie、session 等知识。</li>
+                        <li>了解同源策略，以及常用的跨域方法。</li>
+                    </ul>
+                </li>
+                <li>
+                    <div class="circle"></div>
+                    <h4>命令行</h4>
+                    <ul>
+                        <li>了解命令行，能够使用命令行进行常用的操作。</li>
+                    </ul>
+                </li>
+                <li>
+                    <div class="circle"></div>
+                    <h4>Git</h4>
+                    <ul>
+                        <li>了解 git 版本控制工具以及常用的操作。</li>
+                    </ul>
+                </li>
+                <li>
+                    <div class="circle"></div>
                     <h4>前端工程化</h4>
                     <ul>
-                        <li>了解AMD/CMD规范。</li>
-                        <li>使用过 WebPack Parcel 模块化解决方案。</li>
+                        <li>使用过 WebPack Parcel 等前端打包工具，能够进行基础的使用。</li>
                         <li>能在项目中使用Less / Scss等预处理工具。</li>
-                        <li>能使用postCss进行后处理。</li>
-                        <li>熟悉 async / await / Promise，掌握常见的 异步编程 解决方案。</li>
                         <li>了解基本的前端兼容性处理，性能优化等知识，并能在项目中加以实践。</li>
                     </ul>
                 </li>
+
 
             </ul>
         </section>
