修改打印样式

--- a/index.html
+++ b/index.html
@@ -135,6 +135,18 @@
                     </svg>
                     tongmengwang@163.com
                 </li>
+                <li>
+                    <svg class="icon" aria-hidden="true">
+                        <use xlink:href="#icon-blogger"></use>
+                    </svg>
+                    https://littlebirdflying.github.io/
+                </li>
+                <li>
+                    <svg class="icon" aria-hidden="true">
+                        <use xlink:href="#icon-GitHub"></use>
+                    </svg>
+                    https://github.com/littlebirdflying
+                </li>
             </ul>
         </div>
         <!--<p class="selfIntroduction">-->
@@ -320,7 +332,6 @@
                         <div class="project_intro_header_content">
                             <p>
                                 基于原生 JavaScript 和 CCS 3，动态向 style 标签添加样式以及 pre 标签添加文本，利用 prism.js 实现代码高亮,使简历生动起来。
-
                             </p>
                             <p class="project_intro_links">
                                 <a href="https://littlebirdflying.github.io/demo-animation-resume/index.html" target="_blank">预览地址</a>
@@ -352,7 +363,6 @@
                                 <li>支持手机在线绘画功能。</li>
                             </ul>
                             <p class="project_intro_links">
-
                                 <a href="https://littlebirdflying.github.io/canvas-demo/index.html" target="_blank">预览地址</a>
                                 <a href="https://github.com/littlebirdflying/canvas-demo" target="_blank">源码地址</a>
                             </p>
@@ -482,7 +492,7 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/tween.js/17.2.0/Tween.min.js"></script>
 <!--<script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.2.2/js/swiper.min.js"></script>-->
 <script src="//cdn1.lncld.net/static/js/3.6.5/av-min.js"></script>
-<script src="//at.alicdn.com/t/font_587178_vdxw3bgk42.js"></script>
+<script src="//at.alicdn.com/t/font_587178_vwi2iocx42c.js"></script>
 
 <script src="./js/base/View.js"></script>
 <script src="./js/base/Model.js"></script>
