--- a/index.html
+++ b/index.html
@@ -394,8 +394,8 @@
                     <div class="circle"></div>
                     <h4>移动端页面</h4>
                     <ul>
-                        <li>PC 端根据 <meta name="viewport"> 以及媒体查询 (media query)进行响应式开发。</li>
-                        <li>移动端根据动态 REM、vw/vh 等书写响应式页面，100% 还原设计稿。 </li>
+                        <li>PC 端能使用(meta name="viewport")以及媒体查询 (media query)进行响应式开发。</li>
+                        <li>移动端根据百分比、动态 REM、vw/vh 等书写响应式页面，100% 还原设计稿。 </li>
                     </ul>
                 </li>
                 <li>
