--- a/index.html
+++ b/index.html
@@ -402,9 +402,8 @@
                     <div class="circle"></div>
                     <h4>ECMAScript（JavaScript）</h4>
                     <ul>
-                        <li>熟悉 ECMAScript，了解this、闭包、原型链、面向对象、作用域链等。</li>
-                        <li>熟悉 ES6 的常用语法，能使用 MVC 设计模式思想组织代码，使用模块化的编程思想进行开发。</li>
-                        <li>熟悉 async / await / Promise，掌握常见的 异步编程 解决方案。</li>
+                        <li>熟悉 ECMAScript，理解异步、单线程、this、作用域链、闭包、原型链、面向对象等。</li>
+                        <li>了解 ES6 的部分常用语法,能在项目中普遍使用let、块级作用域、箭头函数、模板字符串、解构赋值、Promise 等语法。</li>
                     </ul>
                 </li>
                 <li>
@@ -417,9 +416,18 @@
                 </li>
                 <li>
                     <div class="circle"></div>
+                    <h4>模块化与设计模式</h4>
+                    <ul>
+                        <li>能使用 MVC 设计模式思想组织代码，使用模块化的编程思想进行开发。</li>
+                        <li>了解 AMD 模块化思想进行代码模块化。</li>
+                        <li>了解 CommonJS 配合 npm 以及构建工具进行基础的模块化操作。 </li>
+                    </ul>
+                </li>
+                <li>
+                    <div class="circle"></div>
                     <h4>jQuery</h4>
                     <ul>
-                        <li>熟悉 jQuery 的常用 API，能使用 jQuery 制作网站，使用事件代理、制作轮播等。</li>
+                        <li>熟悉 jQuery 的常用 API，能使用 jQuery 技术栈进行网站开发。</li>
                     </ul>
                 </li>
                 <li>
@@ -432,12 +440,18 @@
                 </li>
                 <li>
                     <div class="circle"></div>
-                    <h4>HTTP</h4>
+                    <h4>HTTP与浏览器</h4>
                     <ul>
                         <li>了解 HTTP 基础知识，了解常见状态码含义，能够根据请求查看响应。</li>
-                        <li>了解 LocalStorage、Cache-Control、Etag、Expires 等知识，了解几者之间的区别。</li>
-                        <li>了解客户端缓存、Cookie、session 等知识。</li>
-                        <li>了解同源策略，以及常用的跨域方法。</li>
+                        <li>理解客户端缓存、同源策略，以及常用的跨域方法。</li>
+                        <li>理解浏览器运行机制，理解页面加载的整个过程。</li>
+                    </ul>
+                </li>
+                <li>
+                    <div class="circle"></div>
+                    <h4>Node.js</h4>
+                    <ul>
+                        <li>了解 Node.js 的部分基础知识，使用过 Node.js 搭建简易服务器，使用过 express 框架做过 demo。</li>
                     </ul>
                 </li>
                 <li>
@@ -458,9 +472,9 @@
                     <div class="circle"></div>
                     <h4>前端工程化</h4>
                     <ul>
-                        <li>使用过 WebPack Parcel 等前端打包工具，能够进行基础的使用。</li>
-                        <li>能在项目中使用Less / Scss等预处理工具。</li>
-                        <li>了解基本的前端兼容性处理，性能优化等知识，并能在项目中加以实践。</li>
+                        <li>使用过 WebPack 等前端打包工具，能够进行基础的使用。</li>
+                        <li>能在项目中使用 Less / Sass 等预处理工具。</li>
+                        <li>了解基本的前端安全，性能优化等知识，并能在项目中加以实践。</li>
                     </ul>
                 </li>
 
