--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
         </div>
         <div class="personal-info-print">
             <h1 class="name">王童孟</h1>
-            <p class="description">男，26岁，硕士，西北农林科技大学，前端工程师</p>
+            <p class="description">男，1991/11，硕士(2014-2016)，西北农林科技大学，前端工程师,自学前端一年。</p>
             <ul class="contact">
                 <li>
                     <svg class="icon" aria-hidden="true">
