--- a/index.html
+++ b/index.html
@@ -148,6 +148,7 @@
                     https://github.com/littlebirdflying
                 </li>
             </ul>
+            <p class="online-resume">在线简历地址：https://littlebirdflying.github.io/resume/index.html</p>
         </div>
         <!--<p class="selfIntroduction">-->
         <!--</p>-->
@@ -155,10 +156,10 @@
     <section class="myPortfolio" data-x id="siteWorks">
         <div class="boundary">
             <header class="section_header">
-                <h2 class="section_header_title">作品集</h2>
+                <h2 class="section_header_title">项目经历</h2>
             </header>
             <div class="section_body">
-                <section class="project clearfix">
+                <section class="project">
                     <div class="project_intro">
                         <header class="project_intro_header clearfix">
                             <h4 class="project_intro_header_title">多人共享博客<span> - a Multi-user blog</span></h4>
@@ -189,11 +190,11 @@
                             </p>
                         </div>
                     </div>
-                    <div class="project_thumb notPrint">
+                    <div class="project_thumb">
                         <img src="./img/works/multi-user-blog.jpg" alt="导航栏">
                     </div>
                 </section>
-                <section class="project clearfix">
+                <section class="project">
                     <div class="project_intro">
                         <header class="project_intro_header clearfix">
                             <h4 class="project_intro_header_title">在线简历编辑器<span> - a shareable resume-editor online</span></h4>
@@ -203,8 +204,6 @@
                                 <li class="tech-tag-list_item tech-tag-list_item-javascript">JavaScript</li>
                                 <li class="tech-tag-list_item tech-tag-list_item-vue">Vue</li>
                                 <li class="tech-tag-list_item tech-tag-list_item-lean-cloud">LeanCloud</li>
-                                <!--<li class="tech-tag-list_item tech-tag-list_item-jQuery">jQuery</li>-->
-
                             </ul>
                         </header>
                         <div class="project_intro_header_content">
@@ -222,11 +221,11 @@
                             </p>
                         </div>
                     </div>
-                    <div class="project_thumb notPrint">
+                    <div class="project_thumb">
                         <img src="./img/works/resume-editor.jpg" alt="导航栏">
                     </div>
                 </section>
-                <section class="project clearfix">
+                <section class="project">
                     <div class="project_intro">
                         <header class="project_intro_header clearfix">
                             <h4 class="project_intro_header_title">网易云播放器<span> - a Netease cloud player</span></h4>
@@ -254,11 +253,11 @@
                             </p>
                         </div>
                     </div>
-                    <div class="project_thumb notPrint">
+                    <div class="project_thumb">
                         <img src="./img/works/163-music.jpg" alt="导航栏">
                     </div>
                 </section>
-                <section class="project clearfix">
+                <section class="project">
                     <div class="project_intro">
                         <header class="project_intro_header clearfix">
                             <h4 class="project_intro_header_title">快捷导航<span> -a Quick Navigation Page</span></h4>
@@ -284,11 +283,11 @@
                             </p>
                         </div>
                     </div>
-                    <div class="project_thumb notPrint">
+                    <div class="project_thumb">
                         <img src="./img/works/nav-page.jpg" alt="导航栏">
                     </div>
                 </section>
-                <section class="project clearfix">
+                <section class="project">
                     <div class="project_intro">
                         <header class="project_intro_header clearfix">
                             <h4 class="project_intro_header_title">小黄人<span> - code a Minion for you</span></h4>
@@ -315,11 +314,11 @@
                             </p>
                         </div>
                     </div>
-                    <div class="project_thumb notPrint">
+                    <div class="project_thumb">
                         <img src="./img/works/Minion.jpg" alt="苹果风格轮播">
                     </div>
                 </section>
-                <section class="project clearfix">
+                <section class="project">
                     <div class="project_intro">
                         <header class="project_intro_header clearfix">
                             <h4 class="project_intro_header_title">会动的简历<span> - make your resume active</span></h4>
@@ -339,11 +338,11 @@
                             </p>
                         </div>
                     </div>
-                    <div class="project_thumb notPrint">
+                    <div class="project_thumb">
                         <img src="./img/works/animation-resume.jpg" alt="导航栏">
                     </div>
                 </section>
-                <section class="project clearfix">
+                <section class="project">
                     <div class="project_intro">
                         <header class="project_intro_header clearfix">
                             <h4 class="project_intro_header_title">smart 在线画板<span> - Draw anything your want</span></h4>
@@ -368,7 +367,7 @@
                             </p>
                         </div>
                     </div>
-                    <div class="project_thumb notPrint">
+                    <div class="project_thumb">
                         <img src="./img/works/canvas.jpg" alt="canvas画板">
                     </div>
                 </section>
@@ -380,24 +379,7 @@
         <section class="tech-stack">
             <h3>前端</h3>
             <ul>
-                <li>
-                    <div class="circle"></div>
-                    <h4>HTML5 & CSS3</h4>
-                    <ul>
-                        <li>标签语义化：能根据 HTML5 标准编写具有语义化的文档结构。</li>
-                        <li>CSS居中与布局：能快速对元素进行居中处理，使用float、flex、grid等方案进行页面布局。</li>
-                        <li>CSS动画：能使用keyframes、transition、transform等实现常见动画效果。</li>
-                        <li>了解Bootstrap的基本使用规则。</li>
-                    </ul>
-                </li>
-                <li>
-                    <div class="circle"></div>
-                    <h4>移动端页面</h4>
-                    <ul>
-                        <li>PC 端能使用(meta name="viewport")以及媒体查询 (media query)进行响应式开发。</li>
-                        <li>移动端根据百分比、动态 REM、vw/vh 等书写响应式页面，100% 还原设计稿。 </li>
-                    </ul>
-                </li>
+
                 <li>
                     <div class="circle"></div>
                     <h4>ECMAScript（JavaScript）</h4>
@@ -477,7 +459,24 @@
                         <li>了解基本的前端安全，性能优化等知识，并能在项目中加以实践。</li>
                     </ul>
                 </li>
-
+                <li>
+                    <div class="circle"></div>
+                    <h4>HTML5 & CSS3</h4>
+                    <ul>
+                        <li>标签语义化：能根据 HTML5 标准编写具有语义化的文档结构。</li>
+                        <li>CSS居中与布局：能快速对元素进行居中处理，使用float、flex、grid等方案进行页面布局。</li>
+                        <li>CSS动画：能使用keyframes、transition、transform等实现常见动画效果。</li>
+                        <li>了解Bootstrap的基本使用规则。</li>
+                    </ul>
+                </li>
+                <li>
+                    <div class="circle"></div>
+                    <h4>移动端页面</h4>
+                    <ul>
+                        <li>PC 端能使用(meta name="viewport")以及媒体查询 (media query)进行响应式开发。</li>
+                        <li>移动端根据百分比、动态 REM、vw/vh 等书写响应式页面，100% 还原设计稿。 </li>
+                    </ul>
+                </li>
 
             </ul>
         </section>
@@ -489,7 +488,6 @@
             <a class="downloadResume" href="./resume.pdf" download="前端工程师-西北农林科技大学-硕士-王童孟-2018.pdf">下载简历</a>
         </p>
     </section>
-
 
 <!--<section class="message">-->
     <!--<h2>留言</h2>-->
